# oss-security-bot

./: .gitignore  Cargo.toml  Default.toml  README.md
src/: bot.rs  db.rs  lib.rs  llm.rs  mail.rs  main.rs  model.rs  oss.rs  util.rs  webhook.rs
src/bot/: dingtalk.rs  lark.rs  wechat.rs
templates/: Card.json  Default.toml
